--- a/Sources/ITStatsAndScores.xcframework/ios-arm64_x86_64-simulator/ITStatsAndScores.framework/Modules/ITStatsAndScores.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/Sources/ITStatsAndScores.xcframework/ios-arm64_x86_64-simulator/ITStatsAndScores.framework/Modules/ITStatsAndScores.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -9473,6 +9473,16 @@
       },
       {
         "kind": "Import",
+        "name": "SwiftUI",
+        "printedName": "SwiftUI",
+        "declKind": "Import",
+        "moduleName": "ITStatsAndScores",
+        "declAttributes": [
+          "RawDocComment"
+        ]
+      },
+      {
+        "kind": "Import",
         "name": "Foundation",
         "printedName": "Foundation",
         "declKind": "Import",
@@ -16323,7 +16333,7 @@
     {
       "filePath": "\/Users\/admin\/Development\/Production\/IOS\/SDK-StatsAndScores\/Frameworks\/ITStatsAndScores\/ITStatsAndScores\/Models\/FixtureStatistics\/SupportingModels\/SoccerFormation.swift",
       "kind": "StringLiteral",
-      "offset": 88977,
+      "offset": 130983,
       "length": 3,
       "value": "\" \""
     },
